# schematodes

./: .gitignore  Cargo.toml  LICENSE  Readme.md  pyproject.toml  schematodes.pyi  scratch.txt  setup.cfg
.github/workflows/: CI.yml  QuickTests.yml
examples/: playtest.py
src/: lib.rs
stubs/schematodes/: __init__.pyi
tests/: test_schemer.py
