[package]
name = "schematodes"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "schematodes"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.13.0"
pyo3 = { version = "0.22", features = ["gil-refs"] }
